--- a/src/Blog/CoreBundle/Resources/translations/messages.ru.yml
+++ b/src/Blog/CoreBundle/Resources/translations/messages.ru.yml
@@ -2,8 +2,11 @@ home: Главная
 
 by:
 read.more: Читать дальше
+author: Автор
 
 post:
   plural: Публикации
   on: Опубликовано
-  latest: 'Последние публикации'
+  latest: Последние публикации
+  by:
+      author: Опубликовано автором
