The author page.

--- a/src/Blog/CoreBundle/Resources/translations/messages.en.yml
+++ b/src/Blog/CoreBundle/Resources/translations/messages.en.yml
@@ -6,7 +6,9 @@ author: Author
 
 post:
   plural: Posts
-  on: Posted on
   latest: Latest posts
-  by:
-    author: Posted by author
+  on: Posted on
+  by: Posts by
+  by.author: Posts by %name%
+
+author.empty.posts: This autor did not write any post yet.
