--- a/src/Blog/CoreBundle/Resources/translations/messages.ru.yml
+++ b/src/Blog/CoreBundle/Resources/translations/messages.ru.yml
@@ -6,7 +6,9 @@ author: Автор
 
 post:
   plural: Публикации
-  on: Опубликовано
   latest: Последние публикации
-  by:
-      author: Опубликовано автором
+  on: Опубликовано
+  by: Опубликовано автором
+  by.author: Опубликовано автором %name%
+
+author.empty.posts: Этот автор еще не сделал ниодной публикации.
