--- a/src/Blog/CoreBundle/Resources/translations/messages.ru.yml
+++ b/src/Blog/CoreBundle/Resources/translations/messages.ru.yml
@@ -1,8 +1,10 @@
 home: Главная
 
+on: в
 by:
 read.more: Читать дальше
-author: Автор
+name: Имя
+send: Отправить
 
 post:
   plural: Публикации
@@ -10,5 +12,13 @@ post:
   on: Опубликовано
   by: Опубликовано автором
   by.author: Опубликовано автором %name%
+  comments: '{0} Нет комментариев|{1} %count% коментарий|]1,Inf] %count% комментариев'
 
-author.empty.posts: Этот автор еще не сделал ниодной публикации.
+comment:
+  singular: Комментарий
+  plural: Комментарии
+  write: Написать комментарий
+
+author:
+  title: Автор
+  empty.posts: Этот автор еще не сделал ниодной публикации.
